--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,24 +2,24 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
+    - name: Setup Go
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.16
+        go-version-file: 'go.mod'
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -cover ./...
